--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               </li>
             </ul>
           </div>
-          <form action="pdf.php" method="post">
+          <form action="generator-pdf.php" method="post">
             <div class="form-one form-step active">
               <div class="bg-svg"></div>
               <h2>Perfil</h2>
